--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #09091a; color: antiquewhite">
+<html lang="en" style="background-color: #09091a; color: antiquewhite; width: 100%; height: 100%">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Management System</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
