--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Learning Management System</title>
   </head>
   <body>
-    <div id="root" class="w-full h-full"></div>
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
